# Fast-Api-SOLOWORK2

./: my_db.db  pyproject.toml  run_app.py
app/: __init__.py
app/db/: __init__.py
app/db/models/: __init__.py  default.py
app/routes/: __init__.py  default.py
app/schemas/: __init__.py  default.py
