[tool.poetry]
name = "fast-api-solowork2"
version = "0.1.0"
description = ""
authors = ["xXx_Yura the god and destroyer_xXx <gollgloom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
